manifests/seraphim/prod/calibre-dl/Namespace-calibre-dl.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: calibre-dl
