manifests/seraphim/prod/calibre-dl/Service-calibre-dl.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: calibre-dl
    app.kubernetes.io/name: calibre-dl
    app.kubernetes.io/part-of: calibre-dl
    app.kubernetes.io/version: dev
  name: calibre-dl
  namespace: calibre-dl
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: calibre-dl
