manifests/seraphim/prod/calibre-dl/HTTPRoute-calibre-dl.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: calibre-dl
    app.kubernetes.io/name: calibre-dl
    app.kubernetes.io/part-of: calibre-dl
    app.kubernetes.io/version: dev
  name: calibre-dl
  namespace: calibre-dl
spec:
  hostnames:
    - calibre-dl.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: calibre-dl
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
